Refactor Jenkinsfile to simplify test and deploy stages